# pixel_fight

./: Cargo.toml  README.md
fight_configs/: 300_000.ron  30_000.ron  default.ron
src/: app.rs  builder.rs  main.rs  sim.rs  view.rs
