[package]
name = "pixel_fight"
version = "0.1.0"
edition = "2021"
description = "A very simple zero-player fight simulator between groups of squares."
authors = ["Matthieu JOLIMAITRE <matthieu@imagevo.fr>"]
license = "MIT"

[dependencies]
anyhow = "1.0.50"
clap = { version = "3.2", features = ["derive"] }
rand = "0.8"
rayon = "1.5"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
speedy2d = "1.8"
